style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}
html {
    --light: #EEEBDD;
    --accentOne: #810000;
    --accentTwo: #630000;
    --dark: #1B1717;
    --grey: grey;
    font-family: Consolas, monospace, 'Courier New', Courier;
    color: var(--light);
}
body {
    background: url(img/space.gif);
}

.container {
    display: grid;
    grid-template-columns: .75fr 3fr;
    grid-template-rows: 1.2fr 1fr 5fr 1fr;

    margin: auto;
    width: 100%;
    max-width: 60rem; /* 960px */
    background-color: var(--dark);
    box-shadow: 0 10px 16px 0 rgba(255, 255, 255, 0.2), 0 6px 20px 0 rgba(255, 255, 255, 0.2);
}

header {
    grid-area: 1 / 1 / 2 / 3;
    display: flex;
    flex-flow: row wrap;
    justify-content: space-between;
    align-items: center;
    font-size: 1.4rem;
    padding: 0 2rem;
}
header div {
    display: flex;
    align-items: center;
}
header h1 {
    padding-left: 2rem;
}

nav {
    grid-area: 2 / 1 / 3 / 3;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding: 1rem;
}
nav ul {
    display: flex;
    flex-flow: row nowrap;
    width: 100%;
    height: 100%;
    list-style-type: none;
    align-items: center;
    justify-content: center;
}
nav ul li {
    flex: 1;
    display: flex;
    justify-content: center;
    text-decoration: none;
    min-height: 100%;
}
nav ul li a {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 60%;
    border: 4px outset var(--accentOne);
    padding: .75rem 0;
    text-decoration: none;
    background-color: var(--accentTwo);
    color: var(--light);
    
}
nav ul li a:hover {
    background-color: var(--accentOne);
    border: 4px outset var(--accentTwo);
}

aside {
    grid-area: 3 / 1 / 4 / 2;
    background-color: var(--dark);
    border-right: 2px solid var(--light);
    border-top: 2px solid var(--light);
}

main {
    grid-area: 3 / 2 / 4 / 3;
    padding: 2rem;
    border-top: 2px solid var(--light);
}
main h2 {
    margin-bottom: 2px;
}
main p {
    text-indent: 1rem;
    margin: .5rem 0 1rem 0;
    padding-left: .8rem;
    border-left: 2px solid var(--accentOne);
}

footer {
    grid-area: 4 / 1 / 5 / 3;
    background-color: black;
}

